--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "element-ui": "^2.9.1",
+    "events": "^3.0.0",
+    "js-base64": "^2.5.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "screenfull": "^4.2.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
