refactor: 优化侧边栏

--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.9.1",
+    "font-awesome": "^4.7.0",
+    "js-base64": "^2.5.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "screenfull": "^4.2.0",
     "vue": "^2.6.10",
@@ -25,6 +29,7 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
     "style-resources-loader": "^1.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
