--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "font-awesome": "^4.7.0",
     "js-base64": "^2.5.1",
@@ -23,6 +24,7 @@
     "lodash": "^4.17.11",
     "screenfull": "^4.2.0",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
