--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:alpha": "vue-cli-service serve --mode alpha",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "start": "pm2 start app.js --name='ceres-admin'",
