--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "js-base64": "^2.5.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
+    "nprogress": "^0.2.0",
     "screenfull": "^4.2.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-croppa": "^1.3.8",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
