--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "d3": "^5.9.7",
@@ -30,6 +31,7 @@
     "lodash": "^4.17.11",
     "nprogress": "^0.2.0",
     "screenfull": "^4.2.0",
+    "tinymce": "^5.2.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-croppa": "^1.3.8",
