--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "^0.4.0",
     "@tinymce/tinymce-vue": "^3.2.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
