feat: 新增代码生成模块

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 ENV = production
-VUE_APP_BASE_URL = http://server.mini-shop.ivinetrue.com
+VUE_APP_BASE_URL = https://server.mini-shop.ivinetrue.com
