--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "echarts": "^4.2.1",
     "el-tree-transfer": "^2.2.9",
     "element-ui": "^2.11.1",
+    "file-saver": "2.0.1",
     "font-awesome": "^4.7.0",
+    "js-beautify": "^1.10.2",
     "js-base64": "^2.5.2",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
@@ -38,7 +40,8 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.1.6",
-    "vuex": "^3.3.0"
+    "vuex": "^3.3.0",
+    "vuedraggable": "2.20.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
