--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@riophae/vue-treeselect": "^0.4.0",
     "@tinymce/tinymce-vue": "^3.2.0",
     "axios": "^0.19.0",
+    "clipboard": "^2.0.6",
     "core-js": "^2.6.5",
     "d3": "^5.9.7",
     "echarts": "^4.2.1",
@@ -29,19 +30,20 @@
     "element-ui": "^2.11.1",
     "file-saver": "2.0.1",
     "font-awesome": "^4.7.0",
-    "js-beautify": "^1.10.2",
     "js-base64": "^2.5.2",
+    "js-beautify": "^1.10.2",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
     "screenfull": "^4.2.1",
+    "svg-sprite-loader": "^5.0.0",
     "tinymce": "^5.2.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.1.6",
-    "vuex": "^3.3.0",
-    "vuedraggable": "2.20.0"
+    "vuedraggable": "2.20.0",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
