--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "element-ui": "^2.11.1",
     "file-saver": "2.0.1",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^6.0.0",
     "js-base64": "^2.5.2",
     "js-beautify": "^1.10.2",
     "js-cookie": "^2.2.1",
