--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-croppa": "^1.3.8",
     "vue-router": "^3.1.6",
-    "vuedraggable": "2.20.0",
+    "vuedraggable": "^2.20.0",
     "vuex": "^3.3.0"
   },
   "devDependencies": {
